--- a/Makefile.inc
+++ b/Makefile.inc
@@ -2,7 +2,11 @@ AR := arm-none-linux-gnueabi-ar
 CC := arm-none-linux-gnueabi-gcc
 
 CPPFLAGS :=
-CFLAGS   := -march=armv5te -mtune=arm9tdmi -msoft-float -Wall -Wextra -I$(TOP_DIR)/lms2012 -I$(TOP_DIR)/include
+CFLAGS   := \
+         -O2 -g \
+         -march=armv5te -mtune=arm9tdmi -msoft-float \
+         -Wall -Wextra \
+         -I$(TOP_DIR)/lms2012 -I$(TOP_DIR)/include
 
 Q := @
 ifeq ($(V),1)
