--- a/test/Makefile
+++ b/test/Makefile
@@ -17,12 +17,13 @@ LDLIBS	 := $(shell pkg-config --libs check)
 libev3         := libev3.a
 libev3_DIR     := $(TOP_DIR)/src
 libev3_SOURCES := \
-	$(libev3_DIR)/panic.c $(libev3_DIR)/allocator.c \
+	$(libev3_DIR)/panic.c $(libev3_DIR)/allocator.c $(libev3_DIR)/array.c \
 	$(libev3_DIR)/atomic_queue.c $(libev3_DIR)/event_dispatcher.c
 
 test	     := test
 test_SOURCES := test.c \
-	check_allocator.c check_atomic_queue.c check_event_dispatcher.c
+	check_allocator.c check_array.c check_atomic_queue.c \
+	check_event_dispatcher.c
 
 TARGETS := $(test) $(libev3)
 
