--- a/drivers/CMakeLists.txt
+++ b/drivers/CMakeLists.txt
@@ -1,3 +1,5 @@
+include_directories ("${CMAKE_CURRENT_LIST_DIR}/include")
+
 if (${TOBOR_TARGET} MATCHES "ev3")
   add_subdirectory (ev3)
 endif (${TOBOR_TARGET} MATCHES "ev3")
