Adds slist datatype

--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -11,7 +11,8 @@ set (test_sources
   check_allocator.c
   check_array.c
   check_atomic_queue.c
-  check_event_dispatcher.c)
+  check_event_dispatcher.c
+  check_slist.c)
 
 set (test_libs
   tobor
