--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -1,11 +1,5 @@
 project (test)
 
-enable_testing ()
-find_package (PkgConfig)
-pkg_check_modules (CHECK check)
-link_directories (${CHECK_LIBRARY_DIRS})
-include_directories (${CHECK_INCLUDE_DIRS})
-
 set (test_sources
   test.c
   check_allocator.c
@@ -19,6 +13,14 @@ set (test_libs
   tobor
   ${CHECK_LIBRARIES})
 
-add_executable (test ${test_sources})
-target_link_libraries (test ${test_libs})
-add_test (test ${CMAKE_CURRENT_BINARY_DIR}/test)
+find_package (PkgConfig)
+pkg_check_modules (CHECK check>=0.9.10)
+if (CHECK_FOUND)
+  enable_testing ()
+  link_directories (${CHECK_LIBRARY_DIRS})
+  include_directories (${CHECK_INCLUDE_DIRS})
+
+  add_executable (test ${test_sources})
+  target_link_libraries (test ${test_libs})
+  add_test (test ${CMAKE_CURRENT_BINARY_DIR}/test)
+endif (CHECK_FOUND)
