--- a/tobor/CMakeLists.txt
+++ b/tobor/CMakeLists.txt
@@ -7,6 +7,8 @@ set (tobor_sources
   atomic_queue.c
   event_dispatcher.c
   sample.c
-  slist.c)
+  slist.c
+  state.c
+  state_machine.c)
 
 add_library (tobor ${tobor_sources})
